@@ -8,19 +8,19 @@
 		<languageKey index="default" type="array">
 			<label index="editgroup_editSettings">Edit Group Settings</label>
 			<label index="editgroup_formSave">Save</label>
-			
+
 			<label index="editgroup_tab_general">General settings</label>
 			<label index="editgroup_tab_image">Image settings</label>
 			<label index="editgroup_tab_members">Member settings</label>
 			<label index="editgroup_tab_invite">Invite members</label>
 			<label index="editgroup_caption_tempmembers">Unconfirmed Members</label>
 			<label index="editgroup_caption_members">Members</label>
-			
+
 			<!-- Genereal messages -->
 			<label index="msg_please_wait">please wait...</label>
-			
+
 			<!-- Tab: Genereal settings -->
-			<label index="editgroup_general_title">Title</label>
+			<label index="editgroup_general_name">Name</label>
 			<label index="editgroup_general_description">Description</label>
 			<label index="editgroup_general_public">Is this group public? this means no admin confirmation is needed</label>
 			<label index="editgroup_general_type">Group Type</label>
@@ -28,11 +28,11 @@
 			<label index="editgroup_general_type_membersOnly">Members Only: Membership is open and non-members can view content, but must join to participate.</label>
 			<label index="editgroup_general_type_private">Private: Membership is by invitation/approval only and only members can view content and participate.</label>
 			<label index="editgroup_general_type_secret">Secret: Membership is by invitation only, only members may participate, and the group is not listed in the group directory.</label>
-			
+
 			<!-- Tab: Image settings -->
 			<label index="editgroup_image_image">Image</label>
 			<label index="editgroup_image_upload">Upload new images</label>
-			
+
 			<!-- Tab: Member settings -->
 			<label index="editgroup_header_membername">Member name</label>
 			<label index="editgroup_header_memberstatus">Member status</label>
