@@ -131,8 +131,8 @@ _USER_ID     = '0';
 		<input type="hidden" name="tx_community[ajaxAction]" id="ajaxActionHolder" value="" />
 			<h3>###LLL:editgroup_tab_general###</h3>
 			<dl>
-				<dt>###LLL:editgroup_general_title###</dt>
-				<dd><input type="text" name="tx_community[group_title]" value="###GROUP.TITLE###" /></dd>
+				<dt>###LLL:editgroup_general_name###</dt>
+				<dd><input type="text" name="tx_community[group_title]" value="###GROUP.NAME###" /></dd>
 
 				<dt>###LLL:editgroup_general_description###</dt>
 				<dd><textarea name="tx_community[group_description]">###GROUP.DESCRIPTION###</textarea></dd>
@@ -230,7 +230,7 @@ _USER_ID     = '0';
 				<dd><input type="text" name="tx_community[invite_search]" value="" /> <a href="#" class="doInviteLink">Diese Personen zur Gruppe einladen.</a></dd>
 			</dl>
 			<div id="INVITE_MEMBER_RESULTS">
-			
+
 			</div>
 		</div>
 		</form>
