@@ -2,6 +2,7 @@
 
 	* changed the name of the general sttings branch in TS ffrom common to general
 	* added a description field to the create group application
+	* initial refactoring of the edit group application
 
 2008-10-06 Frank Naegler  <typo3@naegler.net>
 
